fix(inputs): fix the align error in the popover help

--- a/web/src/styles/sparkta-ui/components/c-panel/_rules.scss
+++ b/web/src/styles/sparkta-ui/components/c-panel/_rules.scss
@@ -1,5 +1,6 @@
 @mixin c-panel {
-	@include container-to-right;
+	@include container-to-right();
+	@include container-to-bottom();
 
 	box-sizing: border-box;
 	position: relative;
